--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url("pexels-daniel-absi-952670.jpg") no-repeat center center fixed;
+    background-color: grer;
     background-size: cover;
 }
 
